--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+
 {% seo %}
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
@@ -26,10 +36,10 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         <ul>
         {% if site.show_downloads %}
-          <li><a href="{{ site.github.zip_url }}">Download <strong>微积分</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>概率论</strong></a></li>
+          <li><a href="{{ site.github.zip_url }}"><strong>微积分</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}"><strong>概率论</strong></a></li>
         {% endif %}
-          <li><a href="{{ site.github.repository_url }}">View On <strong>线性代数</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}"><strong>线性代数</strong></a></li>
         </ul>
       </header>
       <section>
@@ -47,3 +57,13 @@
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
 </html>
+
+
+
+
+
+{% if site.show_downloads %}
+          %<li><a href="{{ site.github.zip_url }}">Download <strong>ZIP</strong></a></li>
+          %<li><a href="{{ site.github.tar_url }}">Download <strong>TAR</strong></a></li>
+        {% endif %}
+          %<li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
