--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,13 +33,14 @@
         {% if site.description or site.github.project_tagline %}
           <p>{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
+        <p class="view"><a href="{{ site.github.home_url }}">返回主页 <small>{{ github_name }}</small></a></p>
         <ul>
         {% if site.show_downloads %}
           <li><a href="{{ site.github.zip_url }}"> <strong>微积分</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}"> <strong>概率论</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}"> <strong>线性代数</strong></a></li>
         {% endif %}
-          <li><a href="{{ site.github.repository_url }}"> <strong>线性代数</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}"> <strong>概率统计</strong></a></li>
+          <li><a href="{{ site.github.home_url }}"> <strong>返回主页</strong></a></li>
         </ul>
       </header>
       <section>
