--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
           <li><a href="{{ site.github.tar_url }}"> <strong>线性代数</strong></a></li>
         {% endif %}
           <li><a href="{{ site.github.repository_url }}"> <strong>概率统计</strong></a></li>
+         <li><a href="{{ site.github.kysx_url }}"> <strong>考研数学</strong></a></li>
           <li><a href="{{ site.github.home_url }}"> <strong>返回主页</strong></a></li>
         </ul>
       </header>
