--- a/_layouts/default - 副本.html
+++ b/_layouts/default - 副本.html
@@ -54,11 +54,7 @@
     {% if site.github.is_project_page %}
       <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
     {% endif %}
-      <p><figure><table>
-<thead>
-<tr><th style='text-align:center;' >&nbsp;</th><th style='text-align:center;' >&nbsp;</th><th style='text-align:center;' >&nbsp;</th><th style='text-align:center;' >&nbsp;</th></tr></thead>
-<tbody><tr><td style='text-align:center;' ><a href='./wjf/index'>微积分</a></td><td style='text-align:center;' ><a href='./xxds/index'>线性代数</a></td><td style='text-align:center;' ><a href='./gltj/index'>概率统计</a></td><td style='text-align:center;' ><a href='./kysx/index'>考研数学</a></td></tr></tbody>
-</table></figure></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
