--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
     {% if site.github.is_project_page %}
       <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
     {% endif %}
-      <p>Copyright &copy <a href="https://mathicu.github.io">统数视界</a> All rights reserved.</p>
+      <p>Copyright &copy <a href="https://mathicu.github.io">统数视界</a>,  All rights reserved.</p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
