--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,3 +8,14 @@
     }
   });
 </script>
+
+<!-- 访问量统计 -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f535d45df8d199ee5e2ba1d685b9fb03";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
