--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,17 @@
         });
     </script>
 
+<!-- 访问量统计 -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f535d45df8d199ee5e2ba1d685b9fb03";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 {% seo %}
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
